--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,8 +7,8 @@ html{
 
 
 body{
-  /* background-color: #79155B; */
-  background-color: #1C6758;
+  background-color: #79155B;
+  /* background-color: #1C6758; */
   /* background-color: #A5F1E9; */
   /* background-color: #E8DED2; */
   /* background-color: #FEFFDF; */
